<resources>
    <string name="app_name">Jelajah3</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="nfctag">NFC Tag</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="cd_destination_icon">Lokasi Tujuan</string>
    <string name="settings">Setting</string>
    <string name="logout">Logout</string>
    <string name="search_hint">Cari</string>
    <string name="search">Cari</string>
    <string name="place_image">place_image</string>
    <string name="user_photo">User_photo</string>
</resources>