<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.jelajah3.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.jelajah3.ui.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_nfc"
        android:name="com.example.jelajah3.ui.nfctag.NFCTagFragment"
        android:label="@string/nfctag"
        tools:layout="@layout/fragment_nfctag" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.example.jelajah3.ui.leaderboard.LeaderboardFragment"
        android:label="@string/leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

</navigation>
